welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:4: error: ')' expected but 'else' found.
  } else if (tea >= 5 && candy >=5){
    ^